--- a/templates/game.mustache
+++ b/templates/game.mustache
@@ -1,41 +1,27 @@
 {{#game}}
   <div class="players">
     {{#players}}
-      <div>{{name}}: {{state}}</div>
+      <div class="player {{state}}">
+        <span class="player_name">{{name}}</span>
+        {{#loot}}<span class="loot">{{loot}} gold</span>{{/loot}}
+        {{#artifacts}}<span class="artifact {{.}}"></span>{{/artifacts}}
+      </div>
     {{/players}}
   </div>
   <div class="table">
-    In play:
+    {{#captured}}
+      <span class="card captured card_{{.}}"></span>
+    {{/captured}}
     {{#table}}
-      <span class="card">{{.}}</span>
+      <span class="card card_{{.}}"></span>
     {{/table}}
   </div>
-  <div class="captured">
-    Loot captured:
-    {{#captured}}
-      <span class="card">{{.}}</span>
-    {{/captured}}
-  </div>
-  <div class="pot">Pot: {{pot}}</div>
-  {{#round}}
-    <div class="round">Round: {{round}}</div>
-  {{/round}}
-  {{^round}}
-  <div class="round">Game has not yet started.</div>
-  {{/round}}
-  <div class="artifacts_destroyed">
-    Artifacts destroyed:
-    {{#artifacts_destroyed}}
-      <span class="card">{{.}}</span>
-    {{/artifacts_destroyed}}
-  </div>
-  <div class="artifacts_seen_count">
-    Artifacts seen: {{artifacts.seen.count}}
-  </div>
-  <div class="artifacts_in_play">
-    Artifacts in play:
-    {{#artifacts_in_play}}
-      <span class="card">{{.}}</span>
-    {{/artifacts_in_play}}
+  <div class="pot">{{pot}}</div>
+  <div class="round current_round_{{round}}">
+    <span class="card round_1"></span>
+    <span class="card round_2"></span>
+    <span class="card round_3"></span>
+    <span class="card round_4"></span>
+    <span class="card round_5"></span>
   </div>
 {{/game}}
