--- a/templates/chat.mustache
+++ b/templates/chat.mustache
@@ -1,6 +1,6 @@
 {{#you}}
   <form action="chat" method="post">
-    <input id="chat" type="text" name="message" />
-    <input type="submit" value="Chat" />
+    <label for="message">{{name}} &gt;</label>
+    <input type="text" name="message" title="Chat..." />
   </form>
 {{/you}}
