--- a/templates/updates.mustache
+++ b/templates/updates.mustache
@@ -1,15 +1,21 @@
 {{#updates}}
   <div>
     {{#more_players}}Waiting for more players.{{/more_players}}
-    {{#join}}{{name}} joined the game.{{/join}}
-    {{#start}}{{name}} wants to start venturing.{{/start}}
-    {{#move}}{{name}} made their move.{{/move}}
-    {{#han}}{{#players}}{{.}} {{/players}} went han.{{/han}}
-    {{#lando}}{{#players}}{{.}} {{/players}}landoed out, capturing {{value}} gold and leaving {{pot}} behind.{{/lando}}
-    {{#death}}{{#players}}{{.}} {{/players}}died of {{card}}.{{/death}}
-    {{#round}}Starting round {{round}}{{/round}}
-    {{#artifacts_in_play}}{{artifacts_in_play}} is in the deck.{{/artifacts_in_play}}
-    {{#card}}{{card}} on the table.{{/card}}
+    {{#join}}<strong>{{name}}</strong> joined the game.{{/join}}
+    {{#start}}<strong>{{name}}</strong> wants to start venturing.{{/start}}
+    {{#move}}<strong>{{name}}</strong> made their move.{{/move}}
+    {{#han}}{{#players}}<strong>{{.}}</strong> {{/players}} went han.{{/han}}
+    {{#lando}}
+      {{#players}}<strong>{{.}}</strong> {{/players}}
+        landoed out, capturing <strong>{{value}}</strong> gold and leaving <strong>{{pot}}</strong> behind.
+    {{/lando}}
+    {{#death}}
+      {{#players}}<strong>{{.}}</strong> {{/players}}
+        died of <strong>{{card}}</strong>.
+    {{/death}}
+    {{#round}}Round <strong>{{round}}</strong>{{/round}}
+    {{#artifacts_in_play}}<strong>{{artifacts_in_play}}</strong> is in the deck.{{/artifacts_in_play}}
+    {{#card}}<strong>{{card}}</strong> on the table.{{/card}}
     {{#chat}}
       <span class="speaker">{{speaker}}:</span>
       <span class="message">{{message}}</span>
