--- a/templates/chat.mustache
+++ b/templates/chat.mustache
@@ -1,6 +1,6 @@
 {{#you}}
   <form action="chat" method="post">
-    <label for="message">{{name}} &gt;</label>
-    <input type="text" name="message" title="Chat..." />
+    <label class="prompt" for="message">&gt;</label>
+    <input type="text" class="text" name="message" title="Chat..." />
   </form>
 {{/you}}
