--- a/templates/create.mustache
+++ b/templates/create.mustache
@@ -1,5 +1,5 @@
-<form action="/create" method="get">
+<form id="create" action="/create" method="get">
 <label for="name">New game:</label>
-<input type="text" name="name" />
+<input class="text" type="text" name="name" />
 <input type="submit" value="Create" />
 </form>
