--- a/templates/list.mustache
+++ b/templates/list.mustache
@@ -1,6 +1,5 @@
 {{#games}}
-  <div class="game round_{{round}}"><a href="/{{name}}/">{{name}}</a>:
-  {{players}} adventurers</div>
+  <li class="game round_{{round}}"><a href="/{{name}}/">{{name}}</a></li>
 {{/games}}
 {{^games}}
 No games currently available.
