--- a/css/default.css
+++ b/css/default.css
@@ -151,18 +151,18 @@ input.card:hover {
 }
 
 /* Artifacts */
-.card_cockring    { width: 125px; height: 100px; background-image: url('img/artifacts/cockring.png'); }
-.card_gingerbread { width: 125px; height: 100px; background-image: url('img/artifacts/gingerbread.png'); }
-.card_nazi        { width: 125px; height: 100px; background-image: url('img/artifacts/nazi.png'); }
-.card_shrek       { width: 125px; height: 100px; background-image: url('img/artifacts/shrek.png'); }
-.card_tube        { width: 125px; height: 100px; background-image: url('img/artifacts/tube.png'); }
+.card_cockring    { background-image: url('img/artifacts/cockring.png'); }
+.card_gingerbread { background-image: url('img/artifacts/gingerbread.png'); }
+.card_nazi        { background-image: url('img/artifacts/nazi.png'); }
+.card_shrek       { background-image: url('img/artifacts/shrek.png'); }
+.card_tube        { background-image: url('img/artifacts/tube.png'); }
 
 /* Hazards */
-.card_bitches { background-image: url('img/hazards/bitches.png'); }
-.card_bricks  { background-image: url('img/hazards/bricks.png'); }
-.card_fire    { background-image: url('img/hazards/fire.png'); }
-.card_snakes  { background-image: url('img/hazards/snakes.png'); }
-.card_spiders { background-image: url('img/hazards/spiders.png'); }
+.card_bitches { width: 125px; height: 100px; background-image: url('img/hazards/bitches.png'); }
+.card_bricks  { width: 125px; height: 100px; background-image: url('img/hazards/bricks.png'); }
+.card_fire    { width: 125px; height: 100px; background-image: url('img/hazards/fire.png'); }
+.card_snakes  { width: 125px; height: 100px; background-image: url('img/hazards/snakes.png'); }
+.card_spiders { width: 125px; height: 100px; background-image: url('img/hazards/spiders.png'); }
 
 /* Treasures */
 .pot { background-image: url('img/treasures/pot.png'); }
